--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  string: 
+  address: MyString
   longitude: 1.5
   latitude: 1.5
 
 two:
-  string: 
+  address: MyString
   longitude: 1.5
   latitude: 1.5
